# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usercloudssdk"
version = "1.0.3"
description = "Python SDK for UserClouds"
authors = [{ name = "Real Python", email = "info@realpython.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/userclouds/sdk-python"

